--- a/hane-kernal/Cargo.toml
+++ b/hane-kernal/Cargo.toml
@@ -1,13 +1,8 @@
-[workspace]
-members = ["hane-kernal", "hane-syntax"]
-
 [package]
-name = "hane"
+name = "hane-kernal"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hane-kernal = { path="hane-kernal" }
-hane-syntax = { path="hane-syntax" }
