Define datastructures needed for unification
Co-authored-by: Morten Raeburn <MortenRaeburn@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,9 @@
 [workspace]
-members = ["hane-kernel", "hane-syntax"]
+members = [
+    "hane-kernel",
+    "hane-unify",
+    "hane-syntax",
+]
 
 [package]
 name = "hane"
