--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,6 @@ jobs:
         with:
             toolchain: stable
             override: true
-            components: rustfmt, clippy
 
       # `cargo check` command here will use installed `nightly`
       # as it is set as an "override" for current directory
@@ -37,7 +36,7 @@ jobs:
         with:
             toolchain: stable
             override: true
-            components: rustfmt, clippy
+            components: rustfmt
 
       - name: Run cargo fmt --check
         uses: actions-rs/cargo@v1
@@ -54,9 +53,24 @@ jobs:
         with:
             toolchain: stable
             override: true
-            components: rustfmt, clippy
 
       - name: Run cargo test
         uses: actions-rs/cargo@v1
         with:
           command: test
+
+  clippy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install latest stable
+        uses: actions-rs/toolchain@v1
+        with:
+            toolchain: stable
+            override: true
+            components: clippy
+
+      - name: Run cargo test
+        uses: actions-rs/cargo@v1
+        with:
+          command: clippy
